<resources>
    <string name="app_name">LAZGA</string>
    <string name="action_settings">not Settings</string>
    <string name="title_activity_browsing">browsingActivity</string>
    <string name="tab_text_4">search</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mugs">Mugs</string>
    <string name="section_format">what</string>Hello World from section: %1$d
    <string name="title_activity_login">Sign in</string>

    <string name="google_maps_API_key">AIzaSyBxBW4JfZdvtni4zmGSshl1Y4nUqL8Euns</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="top_wear">Top wear</string>
    <string name="laptop_cover">laptop cover</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="logOn_button">LogIn</string>
    <string name="sign_up">sign up</string>
    <string name="logoImage">logoImage</string>
    <string name="user_name">User name</string>
    <string name="signUp">SignUp</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password_register">Password</string>
    <string name="signUp_register">SignUp</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="categories_Label">categories</string>
    <string name="todo" />
    <string name="submit">submit</string>
    <string name="price">price</string>
    <string name="design_title">design title</string>
    <string name="card_title">Card Title</string>
    <string name="img">img</string>

</resources>
