<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context="add_activity">


    <ImageButton
        android:id="@+id/image_addBtn"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" android:contentDescription="@string/todo" />

    <RadioGroup
        android:id="@+id/caregories_select"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="categories_radioCheck"
            android:text="@string/top_wear" />

        <RadioButton
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="categories_radioCheck"
            android:text="@string/laptop_cover" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="categories_radioCheck"
            android:text="@string/mugs" />

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="categories_radioCheck"
            android:text="others" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="256dp"
        android:text="@string/categories_Label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/addSubmit"
        android:layout_width="122dp"
        android:layout_height="45dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="64dp"
        android:text="@string/submit"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/add_price_feild"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_title_feild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/design_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>