<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.me.lazqaapp.Register_Activity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:layout_marginBottom="88dp"

        android:layout_marginRight="16dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/phoneNumFeild"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_header" />

    <TextView
        android:id="@+id/register_header"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/signUp_register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="145dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumFeild">

        <RadioButton
            android:id="@+id/maleRBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioCheck"
            android:text="@string/male"
            android:textColorLink="@color/common_google_signin_btn_text_dark_focused" />

        <RadioButton
            android:id="@+id/femaleRBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioCheck"
            android:text="@string/female"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
