<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_margin="7dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingLeft="10dp"
        app:cardMaxElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:id="@+id/cardProgressDialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_below="@+id/cardImage"
                android:id="@+id/cardTitle"
                android:gravity="center_vertical"
                android:text="@string/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardTitle"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</android.support.v7.widget.CardView>